--- a/css/pmaps.css
+++ b/css/pmaps.css
@@ -1,7 +1,13 @@
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font-family: 'PT Sans', sans-serif;
   padding: 30px;
+  height: 100%;
 }
 
 #title {
