--- a/form/Marker.css
+++ b/form/Marker.css
@@ -8,10 +8,17 @@ body {
     margin-bottom: 5px;
 }
 
+.wrapinput {
+  padding: 20px;
+  background: #F8F8F8;
+  border-radius: 6px;
+  margin-bottom: 15px;
+}
+
 .section span {
     background: #2E933C;
     padding: 5px 10px 5px 10px;
-    position: absolute;
+    position: absolute;s
     border-radius: 50%;
     border: 4px solid #fff;
     font-size: 14px;
@@ -27,4 +34,5 @@ body {
 #title {
   color: #2E933C;
   font: 30px 'Bitter', serif;
+
 }
